[gd_scene load_steps=7 format=2]

[ext_resource path="res://data/images/ftl/DoorSystemCircle.png" type="Texture" id=1]
[ext_resource path="res://maps/ship/DoorControl/DoorControlConsole.gd" type="Script" id=2]
[ext_resource path="res://entities/HealthDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/effects/DefectConsole.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.5, 19.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 35.0223

[node name="DoorConsole" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.36815, 0.113618 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Control" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Control"]
shape = SubResource( 2 )

[node name="HealthDisplay" parent="." instance=ExtResource( 3 )]

[node name="Destroyed" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="on_death" from="." to="." method="_on_DoorConsole_on_death"]
[connection signal="body_entered" from="Control" to="." method="_on_Control_body_entered"]
[connection signal="body_exited" from="Control" to="." method="_on_Control_body_exited"]
